welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while(!estFaceMur())
	avance();

while(estfaceMur())
{
	gauche();
	avance();
	droite();
	avance();
}

for (i <- 1 to 4)
	avance();
